--- a/templates/live/shows/list_show.html
+++ b/templates/live/shows/list_show.html
@@ -97,6 +97,56 @@
             
           </div>
         </div>
+           <!-- Filtering and sorting -->
+          <div class="row-fluid" ng-show="leads">
+            <div class="span2">
+              <div class="btn-group">
+                                    <a class="btn" href="#" data-toggle="dropdown">
+                                      {{ _('Filter by') }}
+                                    <i class="icon-angle-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                      <li><a  ng-click="filterByOwner()" href="#" data-toggle="modal">{{ _('All leads') }}</a></li>
+                                      <li><a ng-click="filterByOwner('{{ME}}')" href="#" data-toggle="modal">{{ _('My leads') }}</a></li>
+                                      <li ng-repeat="status in leadstatuses"><a ng-click="filterByStatus('<%=status.status%>')" href="#" data-toggle="modal"><%= status.status %></a></li>
+                                    </ul>
+                                    {{ _('Views') }}
+              </div>
+            </div>
+            <div class="span7">
+              <ul class="nav search-form-top"> 
+                  <li>    
+                    <form class="form-inline ng-pristine ng-valid" ng-submit="executeSearch(searchQuery)">
+                      <div class="input-append row-fluid">
+
+                        <input type="text" ng-model="searchQuery" typeahead="result as result.firstname + ' ' + result.lastname + ' - (' + result.position + ' , ' + result.company +' -'+ result.status + ' )'   for result in results | filter:$viewValue | limitTo:8" typeahead-on-select="selectResult()" class="input-xxlarge" placeholder="{{ _('Quick Filtering') }}">
+
+                       <button class="gbqfb gbqfb-hvr"><i class="icon-filter"></i></button>
+                      </div>
+                    </form>
+                  </li> 
+              </ul>
+            </div>
+            <div class="btn-group pull-right">
+                                    <a class="btn" href="#" data-toggle="dropdown">
+                                    Sort by
+                                    <i class="icon-angle-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                      <li><a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a></li>
+                                      <li><a ng-click="orderBy('firstname')" href="#" data-toggle="modal">{{ _('First Name') }}</a></li>
+                                      <li><a ng-click="orderBy('lastname')" href="#" data-toggle="modal">{{ _('Last Name') }}</a></li>
+                                      <li><a ng-click="orderBy('title')" href="#" data-toggle="modal">{{ _('Title') }}</a></li>
+                                      <li><a ng-click="orderBy('company')" href="#" data-toggle="modal">{{ _('Company') }}</a></li>
+                                      <li><a ng-click="orderBy('status')" href="#" data-toggle="modal">{{ _('Status') }}</a></li>
+                                      
+                                     
+                                    </ul>
+              </div>
+            <br>
+              <br>
+            
+          </div>
 
             
             <div class="row-fluid cards-container">
