--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -196,9 +196,10 @@
           
           <div class="col-md-12">
             <div class="pull-right sharebuttonDiv"> 
-                   <a href="#sharingSettingsModal" class="btn red jfk-button jfk-button-action" data-toggle="modal">
-                     Create
-                  </a>
+                  
+                  <button class="btn red jfk-button jfk-button-action" ng-click="save(lead)">
+                    {{_("Create")}}
+                  </button>
             </div>
                 
             <h2 class="page-title">
@@ -264,11 +265,7 @@
                                      <li ng-show="showPhoneForm">
                                       <div class="row">
                                         <form class="form-inline newLeadForm" role="form">
-                                          <div class="form-group sm-group" style="">
-                                            <label class="sr-only" for="exampleInputEmail2">Number</label>
-                                            <input type="text" class="form-control" id="exampleInputEmail2" ng-model="phone.number" placeholder="Enter a number">
-                                          </div>
-                                          <div class="form-group sm-group" style="">
+                                        <div class="form-group xsm-group" style="">
                                             <label class="sr-only" for="exampleInputPassword2">Type</label>
                                             <select ng-model="phone.type" class="form-control">
                                               <option value="home" selected="selected" >{{_('home')}}</option>
@@ -277,6 +274,11 @@
                                               <option>{{_('other')}}</option>
                                             </select>
                                           </div>
+                                          <div class="form-group sm-group" style="width:45%;font-size:10px;">
+                                            <label class="sr-only" for="exampleInputEmail2">Number</label>
+                                            <input type="text" class="form-control" id="exampleInputEmail2" ng-model="phone.number" placeholder="Enter a phone number">
+                                          </div>
+                                          
                                           
                                            <button type="submit" ng-click="pushElement(phone,phones)" class="btn blue jfk-button jfk-button-action">Add</button>
                                             <button type="submit" class="btn btn-default" ng-click="showPhoneForm=false">X</button>
@@ -284,7 +286,7 @@
                                       </div>
                                     </li>
                                     <li ng-repeat="phone in phones"> <a editable-text="phone.number" onbeforesave="inlinePatch('Infonode','phones', 'number',phone.entityKey,$data)"> <%=phone.number%> </a> - <a editable-select="phone.type" e-ng-options="s.value as s.text for s in statuses" onbeforesave="inlinePatch('Infonode','phones', 'type',phone.entityKey,$data)"> <%=phone.type%> </a> <a ><img class="ctodeal"  /></a></li>
-                                    <li><a ng-hide="showPhoneForm" ng-click="showPhoneForm=true" class="btn-link addAnotherPhone" ><i class="icon-plus"></i>Add a new Phone</a></li>
+                                    <li><a ng-hide="showPhoneForm" ng-click="showPhoneForm=true" class="btn-link addAnotherPhone" ><i class="icon-plus"></i>Add a new phone number</a></li>
 
                                   </ul>
                                 <div class="news-block-tags">
@@ -297,7 +299,7 @@
                                           <form class="form-inline newLeadForm" role="form">
                                             <div class="form-group lg-group" style="">
                                               <label class="sr-only" for="exampleInputEmail2">Email</label>
-                                              <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter a number">
+                                              <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Add an email address">
                                             </div>
                                              <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email,emails)" >Add</button>
                                               <button type="submit" ng-click="showEmailForm=false" class="btn btn-default">X</button>
