--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -1,39 +1,32 @@
   <div id="sendingEmail" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-body">
-      
-        
           <p ng-show="sending">Sending...</p>
           <p ng-show="emailSent">You email has been sent</p>
-
-
-        
-          
-       
-      
     </div>
-</div>
+  </div>
+
 <div id="newDocument" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-              <h3 id="myModalLabel" class="modal-title">{{_("Create a new")}} <%=mimeType%></h3>
-            </div>
-            <div class="modal-body">
-                     <div class="controls controls-row">
-                          <form id="addTask" ng-submit="createDocument(newdocument)" class="ng-pristine ng-valid">
-                          <input class="form-control" autofocus type="text" placeholder="Enter a new <%=mimeType%> name" id="taskTitle" ng-model="newdocument.title" required>
-                     </div>
-            </div>
-            <div class="modal-footer">
-              <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-              
-               <input  type="submit" class="btn green" value="Create this document">
-                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->           
-            </form>
-            </div>
-            </div>
-          </div>
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="myModalLabel" class="modal-title">{{_("Create a new")}} <%=mimeType%></h3>
+    </div>
+    <div class="modal-body">
+             <div class="controls controls-row">
+                  <form id="addTask" ng-submit="createDocument(newdocument)" class="ng-pristine ng-valid">
+                  <input class="form-control" autofocus type="text" placeholder="Enter a new <%=mimeType%> name" id="taskTitle" ng-model="newdocument.title" required>
+             </div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+      
+       <input  type="submit" class="btn green" value="Create this document">
+        <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->           
+    </form>
+    </div>
+    </div>
+  </div>
 </div>
 
 
@@ -54,15 +47,14 @@
 </div>
     
 <div  class="page-content">
-<div class="loader-container row" ng-show="isLoading">
-      <div class="loader-dialog col-md-4 col-md-offset-4 ">
-        <div class="loader-content">
-          Loading...
-        </div>
+      <div class="loader-container row" ng-show="isLoading">
+            <div class="loader-dialog col-md-4 col-md-offset-4 ">
+              <div class="loader-content">
+                Loading...
+              </div>
+            </div>
+            
       </div>
-      
-    </div>
-
       <div class="" ng-show="immediateFailed">
          <div class="col-md-12">  
           <h1>Sign-in Button;</h1>
@@ -203,7 +195,7 @@
                 
             <h2 class="page-title">
             <a href="/#/leads" data-toggle="tooltip" data-placement="bottom" title="Back to Leads">
-            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Leads")}} > <a editable-text="lead.firstname" onbeforesave="inlinePatch('Lead','', 'firstname',lead.entityKey,$data)"> <%= lead.firstname %>  </a> <a editable-text="lead.lastname" onbeforesave="inlinePatch('Lead','', 'lastname',lead.entityKey,$data)" > <%= lead.lastname %> </a></h2>
+            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Contacts")}} > <a editable-text="contact.firstname" onbeforesave="inlinePatch('Contact','', 'firstname',contact.entityKey,$data)"> <%= contact.firstname %>  </a> <a editable-text="contact.lastname" onbeforesave="inlinePatch('Contact','', 'lastname',contact.entityKey,$data)" > <%= contact.lastname %> </a></h2>
             <hr>
           </div>
         </div>
@@ -243,9 +235,9 @@
                           </div>
                           <div class="col-md-6">
                             <div class="form-group">
-                              <label class="control-label col-md-4">Company</label>
+                              <label class="control-label col-md-4">Account</label>
                               <div class="col-md-8">
-                                <input type="text" ng-model="lead.company" class="form-control">
+                                <input type="text" required ng-model="searchAccountQuery" typeahead="result as result.name  for result in results | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="Search">
                               </div>
                             </div>
                           </div>
