--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -176,31 +176,30 @@
             <div class="col-md-9">
              <div class="inner-cards-container waterfall" ng-hide="blankStateaccount">
                 <div droppable  ng-repeat="account in accounts" data-column="<%=getPosition($index)%>" class="cardElement" ng-drop="dropTag(account)">
-                    <div class="cardHeader">
-                          <a href="/#/accounts/show/<%= account.id %>">
-                              <h2 class="cardTitle">
-                                <%= account .name %>
-                              </h2>
-                          </a>  
-                    </div>
-                    <hr>
-                    <div class="cardDetails">
-                      <div class="desc">
-                        <div class="row margin-bottom-5">
-                          <div class="col-md-12"><a ng-show="account.industry" class="desc" href="/#/search/type:Account <%=account.industry%>">#<%=account.industry%></a>
-                          </div>
-                          
-                        </div>
-                      </div>
-                      <br>
-                      <div class="row cardTags">
-                        <div class="col-md-12">
-                             <a ng-repeat="tag in account.tags" href="/#/search/type:Account tags:<%=tag.id%>"> <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
-                             </a>
-                        </div>
-                      </div>
-                    </div>
+                <div class="industrySection">
+                      <img class="industryPics" src="static/img/food_industry.jpg">
+                      
                 </div>
+        <div class="detailsSection">
+          <div class="head">
+            <div class="pic">
+                <a href="https://angel.co/zesty-1" class="startup-link" title="Zesty"><img alt="Zesty" class="angel_image" data-id="126085" data-type="Startup" src="https://s3.amazonaws.com/photos.angel.co/startups/i/126085-4af1a2b184ccd1f1e2e140f9149617bb-thumb_jpg.jpg?buster=1383554004" data-hasqtip="2"></a>
+            </div>
+            <div class="text">
+                <div class="name"><a href="https://angel.co/zesty-1" class="profile-link" data-id="126085" data-type="Startup"><%= account .name %></a></div>
+                 <div class="pitch"><%= account.account_type %>, <%= account.industry %>.</div>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+        <div class="tagsSection">
+            <div class="sectionContent">
+                 <a ng-repeat="tag in account.tags" href="/#/search/type:Account tags:<%=tag.id%>"> <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+                 </a>
+            </div>
+          </div>
+</div>
+
               <div ng-show="blankStateaccount" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
