--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -13,7 +13,25 @@
      
       <!-- END SIDEBAR MENU -->
 </div>
-    
+<div class="row subHeader">
+<div class="currentApp">
+  <h2 class="page-title">
+    <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png">
+    Admin Console  
+  </h2>
+</div>
+  <div class=" subHeaderContent">
+            <div class="pull-right sharebuttonDiv"> 
+                  
+                  <button class="btn red jfk-button jfk-button-action" ng-click="save(lead)">
+                    Create
+                  </button>
+            </div>
+                  <h2 class="page-title">
+            <a href="/#/leads" data-toggle="tooltip" data-placement="bottom" title="Back to Leads">
+            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Leads")}} <i class="fa  fa-angle-right"></i> <a editable-text="lead.firstname" onbeforesave="inlinePatch('Lead','', 'firstname',lead.entityKey,$data)"> <%= lead.firstname %>  </a> <a editable-text="lead.lastname" onbeforesave="inlinePatch('Lead','', 'lastname',lead.entityKey,$data)" > <%= lead.lastname %> </a></h2>
+  </div>
+</div>    
 <div  class="page-content">
     <div class="loader-container row" ng-show="isLoading">
           <div class="loader-dialog col-md-4 col-md-offset-4 ">
@@ -37,22 +55,6 @@
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-        <div class="row">
-          
-          <div class="col-md-12">
-            <div class="pull-right sharebuttonDiv"> 
-                  
-                  <button class="btn red jfk-button jfk-button-action" ng-click="save(lead)">
-                    {{_("Create")}}
-                  </button>
-            </div>
-                
-            <h2 class="page-title">
-            <a href="/#/leads" data-toggle="tooltip" data-placement="bottom" title="Back to Leads">
-            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Leads")}} > <a editable-text="lead.firstname" onbeforesave="inlinePatch('Lead','', 'firstname',lead.entityKey,$data)"> <%= lead.firstname %>  </a> <a editable-text="lead.lastname" onbeforesave="inlinePatch('Lead','', 'lastname',lead.entityKey,$data)" > <%= lead.lastname %> </a></h2>
-            <hr>
-          </div>
-        </div>
             <div class="row">
               <div class="col-md-9">
               <!-- BEGIN PORTLET-->
