--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -14,7 +14,7 @@
 <div class="row subHeader">
 <div class="currentApp">
   <h2 class="page-title">
-    <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png">
+    <!-- <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
     {{active_app.label}}
   </h2>
 </div>
