--- a/templates/admin/users/list.html
+++ b/templates/admin/users/list.html
@@ -1,3 +1,20 @@
+<div class="row subHeader">
+<div class="currentApp">
+  <h2 class="page-title">
+    <!-- <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
+    {{active_app.label}}
+  </h2>
+</div>
+  <div class=" subHeaderContent">
+            <div class="pull-right sharebuttonDiv"> 
+                  
+                  <!-- <button class="btn jfk-button jfk-button-action" ng-click="save(account)">
+                    <i class="fa-cog"></i>
+                  </button> -->
+            </div>
+                  <h2 class="page-title">{{ _("Users") }} </h2>
+  </div>
+</div>
  <div  class="page-content">
     
 
@@ -66,7 +83,7 @@
         <div class="row">
           
           <div class="col-md-12">
-            <h2>{{ _("Users") }} </h2>
+            
             
             <div class="btn-group">
             
