--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -60,21 +60,22 @@
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-    <div class="row">
-      <div class="col-md-2"> 
-        <a  href="/#/leads/new"  id="sample_editable_1_new" class="btn red">
-          {{ _("New Lead") }} <i class="icon-plus"></i>
+    <div class="row ">
+      <div class="col-md-9"> 
+        <a  href="/#/leads/new"  id="sample_editable_1_new" class="btn red newBtn">
+          {{ _("New Lead") }} 
         </a>          
       </div>
-    </div>
-    <div class="row cards-container">
-    <div class="">
-      <div class="col-md-9 inner-cards-container waterfall" ng-hide="blankStatelead">
-        <div ng-repeat="lead in leads" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)">
+    <div class="col-md-9">
+    <div class="row ">
+    <div class="tab-pane">
+    <div class="row ">
+      <div class="col-md-12 waterfall" ng-hide="blankStatelead">
+        <div ng-repeat="lead in leads" droppable ng-class="{rightcards: getPosition($index)==4}" data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)">
           <div class="detailsSection">
             <div class="head">
               <div class="pic">
-                <a href="/#/leads/show/<%= lead.id %>" class="startup-link" title="account.name"><img ng-hide="lead.logo_img_id" alt="<%= lead.firstname %> <%= lead.lastname %>" class="angel_image" src="/static/img/default_company.png" >
+                <a href="/#/leads/show/<%= lead.id %>" class="startup-link" title="account.name"><img ng-hide="lead.logo_img_id" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive img-thumbnail" src="/static/img/default_company.png" >
                 <img ng-show="lead.logo_img_id" alt="<%= lead.firstname %> <%= lead.lastname %>" class="angel_image" ng-src="https://docs.google.com/uc?id=<%= lead.logo_img_id %>" data-hasqtip="2">
                 </a>
               </div>
@@ -120,7 +121,7 @@
           </div>
         </div>
         
-        <div ng-show="isFiltering * !leads" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+        <div ng-show="isFiltering * !leads" data-span="all" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
           <div class="dashboard-stat cards" >
             <div class="blank_slate_arrow"></div>
             <div class="thumbnail blank_slate_body">
@@ -131,8 +132,8 @@
         <div class="clearfix"></div>
       </div><!--/inner-cards-container-->
       <!--$Blank state-->
-      <div class="col-md-9 inner-cards-container" ng-show="blankStatelead">
-        <div  data-span="3" class="cardElement blankState" data-tablet="span6" data-desktop="span12">
+      <div class="col-md-12 " ng-show="blankStatelead">
+        <div  data-span="all" class="dashboard-stat cards" data-tablet="span6" data-desktop="span12">
           <div class="">
             <div class="blank_slate_arrow"></div>
             <div class="thumbnail blank_slate_body">
@@ -145,10 +146,14 @@
         </div>
         <div class="clearfix"></div>
       </div><!--/inner-cards-container-->
+      </div>
+      </div>
     </div>
-    <div class="col-md-3 fixed-labelsCard">
+  </div>
+      <div class="col-md-3 fixed-labelsCard">
       <div class="row">
-        <div class="portlet cardElement labelsCard">
+      <div class="col-md-12">
+        <div class="portlet showCard">
           <div class="portlet-title">
             <div class="caption">
                     <!-- class="fa fa-reorder"--><i></i>Labels
@@ -184,13 +189,13 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-8">
                   <ul class="color_pallet_menu">
                     <li ng-repeat="color in color_pallet" ng-click="checkColor(color)" class="color-<%=color.name%>" ng-class='{colorChecked: color.name==tag.color.name}' >
                     </li>
                   </ul>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                   <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
                 </div>
               </div>
@@ -202,8 +207,8 @@
           </div>
         </div>
       </div>
+      </div>
     </div>
-  </div>
       <!-- END PAGE CONTAINER--> 
 </div>
 <script type="text/javascript">
