--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -51,22 +51,18 @@
       </span>
     </div>
   </div>
-  <div class="container-fluid" ng-show="isSignedIn">
-        
-        <!-- END PAGE HEADER-->
-        <!-- BEGIN PAGE CONTENT-->
-    <div class="row">
-      <div class="col-md-2">         
-        <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
-          {{ _("New Opportunity") }} <i class="icon-plus"></i>
-        </button>                
-      </div>
-    </div>
-  </div>
   <!-- $cards container -->
-  <div class="row cards-container">
-    <div class="">
-      <div class="col-md-9 inner-cards-container waterfall" ng-hide="blankStateopportunity">
+  <div class="row ">
+    <div class="col-md-9" ng-show="isSignedIn" style="">
+        <button ng-click="showModal()" id="sample_editable_1_new" class="btn red newBtn">
+          New Opportunity 
+        </button>                
+    </div>
+    <div class="col-md-9">
+    <div class="row">
+      <div class="tab-pane">
+      <div class="row">
+      <div class="col-md-12 waterfall" ng-hide="blankStateopportunity">
         <div ng-repeat="opportunity in opportunities" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(opportunity,$index)">
           <div class="detailsSection">
             <div class="head">
@@ -118,7 +114,7 @@
               </div>
           </div>
         </div>
-        <div ng-show="isFiltering * !opportunities" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+        <div ng-show="isFiltering * !opportunities" data-span="all" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
           <div class="dashboard-stat cards" >
             <div class="blank_slate_arrow"></div>
             <div class="thumbnail blank_slate_body">
@@ -129,8 +125,8 @@
         <div class="clearfix"></div>
       </div><!--/inner-cards-container-->
       <!--$Blank state-->
-      <div class="col-md-9 inner-cards-container" ng-show="blankStateopportunity">
-        <div  data-span="3" class="cardElement blankState" data-tablet="span6" data-desktop="span12">
+      <div class="col-md-12" ng-show="blankStateopportunity">
+        <div  data-span="3" class="dashboard-stat cards" data-tablet="span6" data-desktop="span12">
           <div class="">
             <div class="blank_slate_arrow"></div>
             <div class="thumbnail blank_slate_body">
@@ -143,10 +139,14 @@
         </div>
         <div class="clearfix"></div>
       </div><!--/inner-cards-container-->
+          </div>
+       </div>
+     </div>
     </div>
     <div class="col-md-3 fixed-labelsCard">
       <div class="row">
-        <div class="portlet cardElement labelsCard">
+      <div class="col-md-12">
+        <div class="portlet showCard">
           <div class="portlet-title">
             <div class="caption">
                     <!-- class="fa fa-reorder"--><i></i>Labels
@@ -182,13 +182,13 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-8">
                   <ul class="color_pallet_menu">
                     <li ng-repeat="color in color_pallet" ng-click="checkColor(color)" class="color-<%=color.name%>" ng-class='{colorChecked: color.name==tag.color.name}' >
                     </li>
                   </ul>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                   <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
                 </div>
               </div>
@@ -199,6 +199,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
     </div>
   </div>
