--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -131,7 +131,7 @@
               </div>
           </div>
         </div>
-        <div ng-show="isFiltering * !cases" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+        <div ng-show="isFiltering * !cases" data-span="all" class="" data-tablet="span6" data-desktop="span12">
           <div class="dashboard-stat cards" >
             <div class="blank_slate_arrow"></div>
             <div class="thumbnail blank_slate_body">
