--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -63,13 +63,13 @@
       <div class="tab-pane">
       <div class="row">
       <div class="col-md-12 waterfall" ng-hide="blankStateopportunity">
-        <div ng-repeat="opportunity in opportunities" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(opportunity,$index)">
+        <div ng-repeat="opportunity in opportunities" ng-class="{rightcards: getPosition($index)==4}" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(opportunity,$index)">
           <div class="detailsSection">
             <div class="head">
               <div class="pic">
                 <a href="/#/opportunities/show/<%= opportunity.id %>" class="startup-link" title="account.name">
-                  <img ng-hide="opportunity.logo_img_id" alt="account.name" class="angel_image" src="/static/img/default_company.png" >
-                  <img ng-show="opportunity.logo_img_id" alt="account.name" class="angel_image" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
+                  <img ng-hide="opportunity.logo_img_id" alt="account.name" class="img-responsive img-thumbnail" src="/static/img/default_company.png" >
+                  <img ng-show="opportunity.logo_img_id" alt="account.name" class="img-responsive img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
                 </a>
               </div>
               <div class="text">
@@ -114,7 +114,7 @@
               </div>
           </div>
         </div>
-        <div ng-show="isFiltering * !opportunities" data-span="all" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+        <div ng-show="isFiltering * !opportunities" data-span="all" class="" data-tablet="span6" data-desktop="span12">
           <div class="dashboard-stat cards" >
             <div class="blank_slate_arrow"></div>
             <div class="thumbnail blank_slate_body">
